<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string
		name="app_name">TextonMotion</string>
	<string
		name="app_desc">An application that allows you to send SMS while moving without
		accidents</string>
	<string
		name="select_contact_list_manual_button">New Entry</string>
	<string
		name="select_contact_list_done_button">Done</string>
	<string
		name="compose_edittext_hint">Tap here to start composing</string>
	<!-- Title for Latin keyboard -->
	<string
		name="ime_name">TextOnMotion Soft Keyboard</string>

	<!-- Symbols that are commonly considered word separators in this language -->
	<string
		name="word_separators">\u0020.,;:!?\n()[]*&amp;@{}/&lt;&gt;_+=|&quot;</string>

	<!-- Labels on soft keys -->
	<string
		name="label_go_key">Go</string>
	<string
		name="label_next_key">Next</string>
	<string
		name="label_send_key">Send</string>
	<string
		name="search_hint">TextOnMotion Search</string>
	<string
		name="settings_description">Search TextOnMotion</string>
	<string
		name="softkeybord_label">TextOnMotion Keyboard</string>
	<string
		name="softkeyboard_description">TextOnMotion Transperent Keyboard</string>
	<string
		name="preference_help_title">Help &amp; About</string>
	<string
		name="launch_help_summary_intent_preference">TextOnMotion Guide and Terms</string>
	<string
		name="message_view_receipient_name">2001</string>
    <string name="action_settings">Settings</string>
    <string name="backup_help_message">Proceed to backup or restore your messages to our secure online facility</string>
    <string name="restore">Restore</string>
    <string name="backup">Backup</string>
    <string name="sign_out">Sign Out</string>
    <string name="login_or_register">Login / Register</string>
    <string name="login_error_helper">You must be signed in to use the online backup feature</string>
    <string name="signed_out">Signed Out</string>
    <string name="compose">Compose</string>
    <string name="interactive_mode">Interactive Mode</string>
    <string name="walking_mode">Walking Mode</string>
    <string name="regular_mode">Regular Mode</string>
    <string name="done">Done</string>
    <string name="email_hint">example@gmail.com</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="long_word">Long Word:    </string>
    <string name="short_form">Short Form:     </string>
    <string name="sync">sync</string>
    <string name="add">Add</string>
    <string name="menu">Menu</string>
    <string name="call">Call</string>
    <string name="delete">Delete</string>
    <string name="reply">Reply</string>
    <string name="restart">Restart</string>
    <string name="voice_compose_hint">Speak to Compose</string>
</resources>
